[tool.poetry]
name = "version-testing"
version = "0.1.0"
description = ""
authors = ["Henning Wöhrmann <henning@woehrmann.de>"]
readme = "README.md"
packages = [{include = "version_testing"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
